# BetaTrader

./: .gitignore  .gitmodules  BETA_TRADER_HANDOVER.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  awesome.css  classes.html  dir_000000_000021.html  dir_000002_000014.html  dir_000002_000021.html  dir_000003_000002.html  dir_000003_000008.html  dir_000003_000009.html  dir_000003_000011.html  dir_000003_000012.html  dir_000003_000014.html  dir_000003_000021.html  dir_000006_000014.html  dir_000006_000019.html  dir_000007_000005.html  dir_000007_000010.html  dir_000007_000019.html  dir_000008_000014.html  dir_000008_000015.html  dir_000008_000021.html  dir_000009_000014.html  dir_000009_000019.html  dir_000011_000004.html  dir_000011_000014.html  dir_000011_000021.html  dir_000012_000004.html  dir_000012_000006.html  dir_000012_000008.html  dir_000012_000009.html  dir_000012_000011.html  (+726 more)
client/client_admin/: CMakeLists.txt  README.md
client/client_admin/include/admin/: ExchangeManager.h  ExchangePanel.h
client/client_admin/src/: ExchangeManager.cpp  ExchangePanel.cpp
client/client_app/: CMakeLists.txt  README.md
client/client_app/src/: App.cpp  App.h  Main.cpp
client/client_app/tests/: CMakeLists.txt
client/client_app/tests/src/: AppLogicTests.cpp
client/client_fix/: CMakeLists.txt  README.md
client/client_fix/include/fix_client/: AuthManager.h  ConnectionPanel.h  FixClientSession.h  FixMessageParser.h  SeqNumStore.h
client/client_fix/src/: AuthManager.cpp  ConnectionPanel.cpp  FixClientSession.cpp  FixMessageParser.cpp  SeqNumStore.cpp
client/client_fix/tests/: CMakeLists.txt
client/client_fix/tests/src/: AuthManagerTests.cpp  ClientFixEndToEndTests.cpp  FixClientSessionTests.cpp  FixMessageParserTests.cpp  SeqNumStoreTests.cpp
client/client_ohlc/: CMakeLists.txt  README.md
client/client_ohlc/include/ohlc/: CandleAggregator.h
client/client_ohlc/src/: CandleAggregator.cpp
client/client_orderbook/: CMakeLists.txt  README.md
client/client_orderbook/include/client_orderbook/: OrderBookManager.h  OrderBookModel.h
client/client_orderbook/include/orderbook/: OrderBook.h
client/client_orderbook/src/: OrderBook.cpp  OrderBookModel.cpp
client/client_orderbook/tests/: CMakeLists.txt
client/client_orderbook/tests/src/: OrderBookManagerTests.cpp  OrderBookModelTests.cpp
client/client_simulator/: CMakeLists.txt  README.md
client/client_simulator/include/simulator/: StochasticSimulator.h
client/client_simulator/src/: Main.cpp  StochasticSimulator.cpp
client/client_ui/: CMakeLists.txt  README.md
client/client_ui/include/client_ui/: ChartPanel.h  ConnectionPanel.h  OrderBlotterPanel.h  OrderBookPanel.h  OrderBookView.h  PriceLadderPanel.h  SimulatorPanel.h  Theme.h  TradeTicketPanel.h  TradingPanel.h  UIManager.h
client/client_ui/src/: ChartPanel.cpp  ConnectionPanel.cpp  OrderBlotterPanel.cpp  OrderBookPanel.cpp  OrderBookView.cpp  PriceLadderPanel.cpp  SimulatorPanel.cpp  Theme.cpp  TradeTicketPanel.cpp  TradingPanel.cpp  UIManager.cpp
common/tests/: CMakeLists.txt  CommonTests.cpp
core/data/: CMakeLists.txt  README.md  TSD.md
core/data/include/: Constants.h
core/data/include/data/: AsyncDatabaseRepository.h  AuthRepository.h  Constant.h  DataRunBookDefinations.h  DatabaseWorker.h  OrderRepository.h  Query.h  SequenceRepository.h  TradeIDRepository.h  TradeRepository.h
core/data/src/: AsyncDatabaseRepository.cpp  AuthRepository.cpp  DatabaseWorker.cpp  Main.cpp  OrderRepository.cpp  TradeIDRepository.cpp  TradeRepository.cpp
core/data/tests/: AuthRepositoryTests.cpp  CMakeLists.txt  OrderRepositoryTests.cpp  SequenceRepositoryTests.cpp  TradeIDRepositoryTests.cpp  TradeRepositoryTests.cpp
core/fix/: CMakeLists.txt  FIX.md  README.md  TSD.md
core/fix/include/fix/: BinaryToCancelOrderRequestConverter.h  BinaryToMarketDataRequestConverter.h  BinaryToModifyOrderRequestConverter.h  BinaryToOrderRequestConverter.h  BusinessMessageReject.h  ExecutionReportToBinaryConverter.h  (+13 more)
core/fix/src/: BinaryToCancelOrderRequestConverter.cpp  BinaryToMarketDataRequestConverter.cpp  BinaryToModifyOrderRequestConverter.cpp  BinaryToOrderRequestConverter.cpp  ExecutionReportToBinaryConverter.cpp  FixServer.cpp  FixSession.cpp  FixSessionManager.cpp  FixUtils.cpp  Main.cpp  MarketDataIncrementalRefreshToBinaryConverter.cpp  MarketDataSnapshotFullRefreshToBinaryConverter.cpp  OrderResponseToBinaryConverter.cpp  OutboundMessageBuilder.cpp
core/fix/tests/: CMakeLists.txt
core/trading-core/: CMakeLists.txt  README.md  TSD.md
core/trading-core/src/: Matcher.cpp  OrderBook.cpp  OrderIDGenerator.cpp  OrderManager.cpp  RiskManager.cpp  TradeIDGenerator.cpp
core/trading-core/tests/: CMakeLists.txt  MatcherTests.cpp  OrderBookTests.cpp  OrderIDGeneratorTests.cpp  OrderManagerTests.cpp  RiskManagerTests.cpp  TradeIDGeneratorTests.cpp
core/trading_core/: CMakeLists.txt  README.md  TSD.md
core/trading_core/src/: ExecutionPublisher.cpp  Main.cpp  MarketDataPublisher.cpp  Matcher.cpp  OrderBook.cpp  OrderIDGenerator.cpp  OrderManager.cpp  Partition.cpp  RiskManager.cpp  TradeIDGenerator.cpp  TradingCore.cpp  WorkerThread.cpp
core/trading_core/tests/: CMakeLists.txt  ExecutionPublisherTests.cpp  MatcherTests.cpp  OrderBookTests.cpp  OrderIDGeneratorTests.cpp  OrderManagerTests.cpp  PartitionTests.cpp  RiskManagerTests.cpp  TestUtils.h  TradeIDGeneratorTests.cpp  TradingCoreTests.cpp  TradingSystemTests.cpp  WorkerThreadTests.cpp
exchange/exchange_fix/: CMakeLists.txt  README.md
exchange/exchange_fix/src/: BinaryToCancelOrderRequestConverter.cpp  BinaryToMarketDataRequestConverter.cpp  BinaryToOrderRequestConverter.cpp  ExecutionReportToBinaryConverter.cpp  FixServer.cpp  FixSession.cpp  FixSessionManager.cpp  Main.cpp  MarketDataIncrementalRefreshToBinaryConverter.cpp  MarketDataSnapshotFullRefreshToBinaryConverter.cpp
exchange/exchange_fix/tests/: CMakeLists.txt
exchange/exchange_persistence/tests/: CMakeLists.txt  OrderRepositoryTests.cpp  TradeIDRepositoryTests.cpp  TradeRepositoryTests.cpp
(+2320 files in other folders)
